CheckIn:Fix bugzilla bug 178734 Can not retrieve the attribute's data type when using the xml schema[0700], 179228 [Regression]Stack overflow using XML data source