@@ -16,30 +16,20 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
 
 import javax.xml.parsers.DocumentBuilderFactory;
 
 import org.apache.xerces.impl.xs.XMLSchemaLoader;
-import org.apache.xerces.impl.xs.XSAttributeGroupDecl;
-import org.apache.xerces.impl.xs.XSAttributeUseImpl;
-import org.apache.xerces.impl.xs.XSComplexTypeDecl;
 import org.apache.xerces.impl.xs.XSElementDecl;
-import org.apache.xerces.impl.xs.XSModelGroupImpl;
-import org.apache.xerces.impl.xs.XSParticleDecl;
 import org.apache.xerces.xs.XSConstants;
 import org.apache.xerces.xs.XSLoader;
 import org.apache.xerces.xs.XSModel;
 import org.apache.xerces.xs.XSNamedMap;
-import org.apache.xerces.xs.XSObjectList;
-import org.apache.xerces.xs.XSParticle;
-import org.apache.xerces.xs.XSTypeDefinition;
 import org.eclipse.datatools.connectivity.oda.OdaException;
+import org.eclipse.datatools.enablement.oda.xml.i18n.Messages;
 import org.eclipse.datatools.enablement.oda.xml.util.ISaxParserConsumer;
 import org.eclipse.datatools.enablement.oda.xml.util.SaxParser;
 import org.eclipse.datatools.enablement.oda.xml.util.XMLDataInputStreamCreator;
-
 
 /**
  * This class is used to offer GUI a utility to get an tree from certain xml/xsd
@@ -47,30 +37,29 @@ import org.eclipse.datatools.enablement.oda.xml.util.XMLDataInputStreamCreator;
  */
 public class SchemaPopulationUtil
 {
+
 	/**
 	 * Get the schema tree's root node
 	 * 
 	 * @param xsdFileName
-	 * @throws MalformedURLException 
-	 * @throws URISyntaxException 
+	 * @throws MalformedURLException
+	 * @throws URISyntaxException
 	 */
-	public static ATreeNode getSchemaTree( String xsdFileName, String xmlFileName, boolean includeAttribute, int numberOfElementsAccessiable )
+	public static ATreeNode getSchemaTree( String xsdFileName,
+			String xmlFileName, int numberOfElementsAccessiable )
 			throws OdaException, MalformedURLException, URISyntaxException
 	{
 		if ( xsdFileName != null
 				&& xsdFileName.toUpperCase( ).endsWith( ".XSD" ) )
 		{
-			if ( xmlFileName != null && xmlFileName.trim( ).length( )>0 )
+			if ( xmlFileName != null && xmlFileName.trim( ).length( ) > 0 )
 				return XSDFileSchemaTreePopulator.getSchemaTree( xsdFileName,
-						xmlFileName,
-						includeAttribute );
+						xmlFileName );
 			else
-				return XSDFileSchemaTreePopulator.getSchemaTree( xsdFileName,
-						includeAttribute );
+				return XSDFileSchemaTreePopulator.getSchemaTree( xsdFileName );
 		}
 		else
-			return new XMLFileSchemaTreePopulator( numberOfElementsAccessiable ).getSchemaTree( xmlFileName,
-					includeAttribute );
+			return new XMLFileSchemaTreePopulator( numberOfElementsAccessiable ).getSchemaTree( xmlFileName );
 	}
 }
 
@@ -85,7 +74,7 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 	private int rowCount;
 	private ATreeNode root;
 	private SaxParser sp;
-	private boolean includeAttribute = true;
+
 	private int numberOfElementsAccessiable;
 	Thread spThread;
 
@@ -104,7 +93,9 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 
 	/*
 	 * (non-Javadoc)
-	 * @see org.eclipse.datatools.enablement.oda.xml.util.ISaxParserConsumer#manipulateData(java.lang.String, java.lang.String)
+	 * 
+	 * @see org.eclipse.datatools.enablement.oda.xml.util.ISaxParserConsumer#manipulateData(java.lang.String,
+	 *      java.lang.String)
 	 */
 	public void manipulateData( String path, String value )
 	{
@@ -112,12 +103,22 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 
 	/*
 	 * (non-Javadoc)
-	 * @see org.eclipse.datatools.enablement.oda.xml.util.ISaxParserConsumer#detectNewRow(java.lang.String, boolean)
+	 * 
+	 * @see org.eclipse.datatools.enablement.oda.xml.util.ISaxParserConsumer#detectNewRow(java.lang.String,
+	 *      boolean)
 	 */
 	public void detectNewRow( String path, boolean start )
 	{
 		String treamedPath = path.replaceAll( "\\Q[\\E\\d+\\Q]\\E", "" ).trim( );
-		this.insertNode( treamedPath );
+		try
+		{
+			this.insertNode( treamedPath );
+		}
+		catch ( OdaException e )
+		{
+			// TODO Auto-generated catch block
+			e.printStackTrace( );
+		}
 		// If not attribute
 		if ( !isAttribute( path ) && start )
 		{
@@ -129,7 +130,7 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 		{
 			assert sp != null;
 			sp.setStart( false );
-			sp.stopParsing();
+			sp.stopParsing( );
 		}
 
 	}
@@ -147,6 +148,7 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 
 	/*
 	 * (non-Javadoc)
+	 * 
 	 * @see org.eclipse.datatools.enablement.oda.xml.util.ISaxParserConsumer#wakeup()
 	 */
 	public synchronized void wakeup( )
@@ -161,13 +163,13 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 	 * @param includeAttribute
 	 * @return
 	 */
-	public ATreeNode getSchemaTree( String xmlFileName, boolean includeAttribute )
+	public ATreeNode getSchemaTree( String xmlFileName )
 	{
-		this.includeAttribute = includeAttribute;
 		try
 		{
 			sp = new SaxParser( XMLDataInputStreamCreator.getCreator( xmlFileName )
-					.createXMLDataInputStream( ), this );
+					.createXMLDataInputStream( ),
+					this );
 
 			spThread = new Thread( sp );
 			spThread.start( );
@@ -197,11 +199,12 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 	 * Insert a node specified by the path.
 	 * 
 	 * @param treatedPath
+	 * @throws OdaException
 	 */
-	private void insertNode( String treatedPath )
+	private void insertNode( String treatedPath ) throws OdaException
 	{
 		boolean isAttribute = isAttribute( treatedPath );
-		
+
 		// Remove the leading "/" then split the path.
 		String[] path = treatedPath.replaceFirst( "/", "" ).split( "/" );
 
@@ -254,8 +257,6 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
 
 				if ( ( i == path.length - 1 ) && isAttribute )
 				{
-					if ( isAttribute && !this.includeAttribute )
-						continue;
 					matchedNode.setType( ATreeNode.ATTRIBUTE_TYPE );
 				}
 				else
@@ -277,79 +278,7 @@ final class XMLFileSchemaTreePopulator implements ISaxParserConsumer
  */
 final class XSDFileSchemaTreePopulator
 {
-	private static boolean includeAttribute = true;
 
-	/**
-	 * Populate the whole tree until all the leaves have no child.
-	 * 
-	 * @param root
-	 */
-	private static void populateRoot( ATreeNode root )
-	{
-		Object[] toBeIterated = root.getChildren( );
-		for ( int i = 0; i < toBeIterated.length; i++ )
-		{
-			Object value = ( (ATreeNode) toBeIterated[i] ).getDataType( );// .getValue(
-																			// );
-			List container = new ArrayList( );
-			findNodeWithValue( root, value.toString( ), container );
-			for ( int j = 0; j < container.size( ); j++ )
-			{
-				if ( ( (ATreeNode) container.get( j ) ).getChildren( ).length == 0 )
-				{
-					Object[] os = ( (ATreeNode) toBeIterated[i] ).getChildren( );
-					for ( int k = 0; k < os.length; k++)
-					{
-						if( !(((ATreeNode)os[k]).getDataType()!= null && ((ATreeNode)os[k]).getDataType().equals(((ATreeNode) container.get( j )).getDataType())))
-							( (ATreeNode) container.get( j ) ).addChild( os[k]);
-					}
-			
-				}
-			}
-		}
-	}
-
-	/**
-	 * Starting from a tree node, find all nodes with given value, and put it to
-	 * container.
-	 * 
-	 * @param root
-	 * @param value
-	 * @param container
-	 */
-	private static void findNodeWithValue( ATreeNode root, String value,
-			List container )
-	{
-		
-		if ( root.getType( ) == ATreeNode.ELEMENT_TYPE 
-				&& !(findRecursiveNode( root ) == null) )
-			return;
-		if ( root.getDataType( ) != null && root.getDataType( ).equals( value ) )
-			container.add( root );
-		Object[] children = root.getChildren( );
-		for ( int i = 0; i < children.length; i++ )
-		{
-			findNodeWithValue( (ATreeNode) children[i], value, container );
-		}
-	}
-
-	/**
-	 * 
-	 * @param value
-	 * @return
-	 */
-	private static ATreeNode findRecursiveNode( ATreeNode value )
-	{
-		ATreeNode node = value.getParent();
-		while ( node!= null )
-		{
-			if( node.getValue().equals( value.getValue()) || findRecursiveNode(node)!=null)
-				return node;
-			node = node.getParent();
-		}
-		
-		return node;
-	}
 	/**
 	 * Return the root node of a schema tree.
 	 * 
@@ -361,69 +290,52 @@ final class XSDFileSchemaTreePopulator
 	 * @throws MalformedURLException
 	 * @throws URISyntaxException
 	 */
-	public static ATreeNode getSchemaTree( String schemafileName, String xmlFileName, boolean incAttr )
-			throws OdaException, MalformedURLException, URISyntaxException
+	public static ATreeNode getSchemaTree( String schemafileName,
+			String xmlFileName ) throws OdaException, MalformedURLException,
+			URISyntaxException
 	{
-		ATreeNode	xmlRoot = new XMLFileSchemaTreePopulator( 2 ).getSchemaTree( xmlFileName ,includeAttribute );
-		
-		includeAttribute = incAttr;
+		ATreeNode xmlRoot = new XMLFileSchemaTreePopulator( 2 ).getSchemaTree( xmlFileName );
+
 		DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance( );
 		factory.setNamespaceAware( true );
 		URI uri = null;
-		File f = new File(schemafileName);
-		if( f.exists( ))
-			uri = f.toURI();
+		File f = new File( schemafileName );
+		if ( f.exists( ) )
+			uri = f.toURI( );
 		else
 		{
-			URL url = new URL(schemafileName);
-			uri = new URI(url.getProtocol( ), url.getUserInfo( ), url.getHost( ), url.getPort( ), url.getPath( ), url.getQuery( ), url.getRef( ));
+			URL url = new URL( schemafileName );
+			uri = new URI( url.getProtocol( ),
+					url.getUserInfo( ),
+					url.getHost( ),
+					url.getPort( ),
+					url.getPath( ),
+					url.getQuery( ),
+					url.getRef( ) );
 		}
-		
-		//Then try to parse the input string as a url in web.
+
+		// Then try to parse the input string as a url in web.
 		if ( uri == null )
 		{
 			uri = new URI( schemafileName );
 		}
-		
+
 		XSLoader xsLoader = new XMLSchemaLoader( );
 		XSModel xsModel = xsLoader.loadURI( uri.toString( ) );
-		ATreeNode complexTypesRoot = populateComplexTypeTree( xsModel );
 
+		if ( xsModel == null )
+			throw new OdaException( Messages.getString( "ui.invalidXSDFile" ) );
 		XSNamedMap map = xsModel.getComponents( XSConstants.ELEMENT_DECLARATION );
 
 		ATreeNode xsdRoot = new ATreeNode( );
-
 		xsdRoot.setValue( "ROOT" );
 		for ( int i = 0; i < map.getLength( ); i++ )
 		{
-			ATreeNode node = new ATreeNode( );
 			XSElementDecl element = (XSElementDecl) map.item( i );
+			ATreeNode node = new ATreeNode( element );
 
-			node.setValue( element.getName( ) );
-			node.setType( ATreeNode.ELEMENT_TYPE );
-			node.setDataType( element.getName( ) );
-			if ( element.getTypeDefinition( ) instanceof XSComplexTypeDecl )
-			{
-				XSComplexTypeDecl complexType = (XSComplexTypeDecl) element.getTypeDefinition( );
-				
-					// If the complex type is explicitly defined, that is, it
-					// has name.
-				if ( complexType.getName( ) != null )
-				{
-					node.setDataType( complexType.getName( ) );
-					ATreeNode n = findComplexElement( complexTypesRoot, complexType.getName( ) );						
-					if ( n != null )
-							node.addChild( n.getChildren( ) );
-				}
-				// If the complex type is implicitly defined, that is, it
-				// has no name.
-				else
-				{
-					addParticleAndAttributeInfo( node, complexType, complexTypesRoot );
-				}
-			}
 			xsdRoot.addChild( node );
-			
+
 			// Only the element whose name is same to the tag name of the
 			// xml root,as well as its sub elements will be populated in the
 			// tree, if this no element that matches the xml root elememt, then
@@ -437,14 +349,13 @@ final class XSDFileSchemaTreePopulator
 				xsdRoot.addChild( node );
 				break;
 			}
-			
+
 		}
 
-		populateRoot( xsdRoot );
 		return xsdRoot;
 
 	}
-	
+
 	/**
 	 * Return the root node of a schema tree.
 	 * 
@@ -455,10 +366,9 @@ final class XSDFileSchemaTreePopulator
 	 * @throws MalformedURLException
 	 * @throws URISyntaxException
 	 */
-	public static ATreeNode getSchemaTree( String xsdFileName, boolean incAttr )
+	public static ATreeNode getSchemaTree( String xsdFileName )
 			throws OdaException, MalformedURLException, URISyntaxException
 	{
-		includeAttribute = incAttr;
 		DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance( );
 		factory.setNamespaceAware( true );
 		URI uri = null;
@@ -468,7 +378,13 @@ final class XSDFileSchemaTreePopulator
 		else
 		{
 			URL url = new URL( xsdFileName );
-			uri = new URI(url.getProtocol( ), url.getUserInfo( ), url.getHost( ), url.getPort( ), url.getPath( ), url.getQuery( ), url.getRef( ));
+			uri = new URI( url.getProtocol( ),
+					url.getUserInfo( ),
+					url.getHost( ),
+					url.getPort( ),
+					url.getPath( ),
+					url.getQuery( ),
+					url.getRef( ) );
 		}
 
 		// Then try to parse the input string as a url in web.
@@ -479,242 +395,23 @@ final class XSDFileSchemaTreePopulator
 
 		XSLoader xsLoader = new XMLSchemaLoader( );
 		XSModel xsModel = xsLoader.loadURI( uri.toString( ) );
-		ATreeNode complexTypesRoot = populateComplexTypeTree( xsModel );
+		// ATreeNode complexTypesRoot = populateComplexTypeTree( xsModel );
 
 		XSNamedMap map = xsModel.getComponents( XSConstants.ELEMENT_DECLARATION );
 
 		ATreeNode root = new ATreeNode( );
-
 		root.setValue( "ROOT" );
 		for ( int i = 0; i < map.getLength( ); i++ )
 		{
-			ATreeNode node = new ATreeNode( );
 			XSElementDecl element = (XSElementDecl) map.item( i );
-
+			ATreeNode node = new ATreeNode( element );
 			node.setValue( element.getName( ) );
 			node.setType( ATreeNode.ELEMENT_TYPE );
 			node.setDataType( element.getName( ) );
 			root.addChild( node );
-			if ( element.getTypeDefinition( ) instanceof XSComplexTypeDecl )
-			{
-				XSComplexTypeDecl complexType = (XSComplexTypeDecl) element.getTypeDefinition( );
-				//If the complex type is explicitly defined, that is, it has name.
-				if ( complexType.getName( ) != null )
-				{
-					node.setDataType( complexType.getName( ) );
-					ATreeNode n = findComplexElement( complexTypesRoot,	complexType.getName( ) );
-					if( n!= null)
-						node.addChild( n.getChildren( ) );
-				}
-				//If the complex type is implicitly defined, that is, it has no name.
-				else
-				{
-					
-					addParticleAndAttributeInfo( node, complexType, complexTypesRoot );
-				}
-			}
-			
-			
 		}
 
-		populateRoot( root );
 		return root;
 
-	}
-
-	/**
-	 * Add the particles and attributes that defined in an implicitly defined ComplexType to the node.
-	 * 
-	 * @param node
-	 * @param complexType
-	 * @throws OdaException 
-	 */
-	private static void addParticleAndAttributeInfo( ATreeNode node,
-			XSComplexTypeDecl complexType, ATreeNode complexTypesRoot ) throws OdaException
-	{
-		ATreeNode temp = findRecursiveNode( node );
-		if( temp!= null )
-		{
-			node.addChild( temp.getChildren() );
-			return;
-		}
-		XSParticle particle = complexType.getParticle( );
-		if ( particle != null )
-		{
-			addElementToNode( node, complexTypesRoot, (XSModelGroupImpl) particle.getTerm( ));
-		}
-		if(!includeAttribute)
-			return;
-		XSAttributeGroupDecl group = complexType.getAttrGrp( );
-		if ( group != null )
-		{
-			XSObjectList list = group.getAttributeUses( );
-			for ( int j = 0; j < list.getLength( ); j++ )
-			{
-				ATreeNode childNode = new ATreeNode( );
-				childNode.setValue( ( (XSAttributeUseImpl) list.item( j ) ).getAttrDeclaration( )
-						.getName( ) );
-				childNode.setType( ATreeNode.ATTRIBUTE_TYPE );
-				node.addChild( childNode );
-			}
-		}
-	}
-
-	/**
-	 * 
-	 * @param node
-	 * @param complexTypesRoot
-	 * @param group
-	 * @throws OdaException
-	 */
-	private static void addElementToNode( ATreeNode node, ATreeNode complexTypesRoot, XSModelGroupImpl group ) throws OdaException
-	{
-		ATreeNode temp = findRecursiveNode( node );
-		if( temp!= null )
-		{
-			node.addChild( temp.getChildren() );
-			return;
-		}
-		
-		XSObjectList list = group.getParticles( );
-		for ( int j = 0; j < list.getLength( ); j++ )
-		{
-			if(  ( (XSParticleDecl) list.item( j ) ).getTerm( ) instanceof XSModelGroupImpl )
-			{
-				addElementToNode ( node, complexTypesRoot, (XSModelGroupImpl)( (XSParticleDecl) list.item( j ) ).getTerm( ) );
-				continue;
-			}
-			ATreeNode childNode = new ATreeNode( );
-			node.addChild(childNode);
-			childNode.setValue( ( (XSParticleDecl) list.item( j ) ).getTerm( )
-					.getName( ) );
-			String dataType = ( (XSElementDecl) ( (XSParticleDecl) list.item( j ) ).getTerm( ) ).getTypeDefinition( )
-					.getName( );
-			if ( dataType == null || dataType.length( ) == 0 )
-				dataType = childNode.getValue( ).toString( );
-			childNode.setDataType( dataType );
-			childNode.setType( ATreeNode.ELEMENT_TYPE );
-			XSTypeDefinition xstype = ((XSElementDecl) ((XSParticleDecl) list.item(j))
-					.getTerm()).getTypeDefinition();
-			//Populate the complex data types under node.
-			if ((!dataType.equals("anyType"))
-					&&  xstype instanceof XSComplexTypeDecl)
-			{	
-				//First do a recursive call to populate all child complex type of current node.
-				if( xstype.getName() == null)
-					addParticleAndAttributeInfo( childNode, (XSComplexTypeDecl)xstype, complexTypesRoot );
-				ATreeNode n = findComplexElement(complexTypesRoot,dataType);
-				if( n!= null )
-				{
-					childNode.addChild(n.getChildren());
-				}
-			}
-		}
-	}
-
-	/**
-	 * Return the tree node instance that represents to the ComplexElement that featured by the given value.
-	 * 
-	 * @param root the tree node from which the search begin
-	 * @param value the name of the ComplexElement
-	 * @return
-	 */
-	private static ATreeNode findComplexElement( ATreeNode root, String value )
-	{
-		Object[] os = root.getChildren( );
-		for ( int i = 0; i < os.length; i++ )
-		{
-			if ( ( (ATreeNode) os[i] ).getValue( ).equals( value ) )
-				return (ATreeNode) os[i];
-		}
-		return null;
-	}
-
-	/**
-	 * Populate a tree of ComplexTypes defined in an XSD file.
-	 * 
-	 * @param xsModel
-	 * @return	the root node of the tree.
-	 * @throws OdaException 
-	 */
-	private static ATreeNode populateComplexTypeTree( XSModel xsModel ) throws OdaException
-	{
-		XSNamedMap map = xsModel.getComponents( XSTypeDefinition.COMPLEX_TYPE );
-
-		ATreeNode root = new ATreeNode( );
-
-		root.setValue( "ROOT" );
-		root.setDataType( "" );
-		for ( int i = 0; i < map.getLength( ); i++ )
-		{
-			ATreeNode node = new ATreeNode( );
-			XSComplexTypeDecl element = (XSComplexTypeDecl) map.item( i );
-			if ( element.getName( ).equals( "anyType" ) )
-				continue;
-			node.setValue( element.getName( ) );
-			node.setType( ATreeNode.ELEMENT_TYPE );
-			node.setDataType( element.getTypeName( ) );
-			root.addChild( node );
-
-			XSParticle particle = element.getParticle( );
-			if ( particle != null )
-			{
-				XSObjectList list = ( (XSModelGroupImpl) particle.getTerm( ) ).getParticles( );
-				populateTreeNodeWithParticles( node, list );
-			}
-			
-			if(!includeAttribute)
-				continue;
-			XSAttributeGroupDecl group = element.getAttrGrp( );
-			if ( group != null )
-			{
-				XSObjectList list = group.getAttributeUses( );
-				for ( int j = 0; j < list.getLength( ); j++ )
-				{
-					ATreeNode childNode = new ATreeNode( );
-					childNode.setValue( ( (XSAttributeUseImpl) list.item( j ) ).getAttrDeclaration( )
-							.getName( ) );
-					childNode.setType( ATreeNode.ATTRIBUTE_TYPE );
-					node.addChild( childNode );
-				}
-			}
-
-		}
-
-		populateRoot( root );
-		return root;
-	}
-
-	/**
-	 * 
-	 * @param node the node to which the elements defined in particles should be populated into
-	 * @param list the XSObjectList which lists all particles.
-	 * @throws OdaException 
-	 */
-	private static void populateTreeNodeWithParticles( ATreeNode node, XSObjectList list ) throws OdaException
-	{
-		for ( int j = 0; j < list.getLength( ); j++ )
-		{
-			ATreeNode childNode = new ATreeNode( );
-			childNode.setValue( ( (XSParticleDecl) list.item( j ) ).getTerm( )
-					.getName( ) );
-			if ( ( (XSParticleDecl) list.item( j ) ).getTerm( ) instanceof XSElementDecl)
-			{
-				String dataType = ( (XSElementDecl) ( (XSParticleDecl) list.item( j ) ).getTerm( ) ).getTypeDefinition( ).getName( );
-				if ( dataType == null || dataType.length( ) == 0 )
-					dataType = childNode.getValue( ).toString( );
-				childNode.setDataType( dataType );
-				childNode.setType( ATreeNode.ELEMENT_TYPE );
-				node.addChild( childNode );
-			}
-			//If the particle itself is of XSModelGroupImpl type, which means that they have child types, then do recursive job
-			//until all the children are added to the node.
-			else if ( ( (XSParticleDecl) list.item( j ) ).getTerm( ) instanceof XSModelGroupImpl)
-			{
-				XSModelGroupImpl mGroup = (XSModelGroupImpl)( (XSParticleDecl) list.item( j ) ).getTerm( );
-				XSObjectList obs = mGroup.getParticles();
-				populateTreeNodeWithParticles( node, obs );
-			}
-		}
 	}
 }
